tests/snapshots/run_file__guide_sum.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/guide_sum.bend
---
NumScott:
10

Scott:
10
