tests/snapshots/run_file__hvm_def_two_defs.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/hvm_def_two_defs.bend
---
NumScott:
-0.349

Scott:
-0.349
