tests/snapshots/run_file__id_underscore.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/id_underscore.bend
---
NumScott:
{2 3}

Scott:
{2 3}
