tests/snapshots/run_file__id_underscore.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/id_underscore.hvm
---
Lazy mode:

(2, 3)

Strict mode:

(2, 3)
