tests/snapshots/run_file__imp_empty_list.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/imp_empty_list.bend
---
λ* λa a
