tests/snapshots/run_file__imp_use_statement.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/imp_use_statement.bend
---
NumScott:
λa {{1 a} {1 a}}

Scott:
λa {{1 a} {1 a}}
