tests/snapshots/run_file__lam_op2.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/lam_op2.bend
---
λa (+ a 2)
