tests/snapshots/run_file__lam_op2.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/lam_op2.hvm
---
Strict mode:

Result: λa (+ a 2)
- ITRS: 1
- TIME: 0.00s
- MIPS: 2.00
